# ctos-vuln-ingest

./: .env copy 2  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  projects.config.json
twistlock-prefect/: prefect.yaml  pyproject.toml  requirements.txt
twistlock-prefect/db/: migrate.py  migrate.sql  seed.py
twistlock-prefect/flows/: twistlock_vuln_pull.py
